# SmileFaceRHI

./: CMakeLists.txt  LICENSE  Main.qml  MainMenu.qml  ProjectManager.qml  README.md  main.cpp  smileface.cpp  smileface.h  stage.cpp  stage.h
shaders/: color.frag  color.vert  stage.vert
